# research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
apps/api/: main.py
configs/: dev.yml
docs/: ADR-001-system-architecture-v2.md
scripts/: smoke_artifactory.py  smoke_config.py  smoke_container.py  smoke_datetime_tool.py  smoke_graph.py  smoke_llm.py  smoke_provider.py  smoke_registry.py  smoke_research_agent.py  smoke_research_workflow.py  smoke_tool.py  smoke_tool_planner.py  smoke_url_tool.py
src/agents/: base.py
src/agents/evaluation/: agent.py  prompts.py
src/agents/fact_check/: agent.py  prompts.py
src/agents/final_evaluation/: agent.py  prompts.py
src/agents/reflection/: agent.py  prompts.py
src/agents/research/: agent.py  prompts.py
src/core/config/: loader.py  models.py  service.py
src/core/dependencies/: container.py
src/core/llm/: base.py  factory.py  models.py  response.py
src/core/llm/providers/: google_provider.py  ollama_provider.py  (+1 more)
src/core/models/: artifact.py  evaluation.py  final_evaluation.py  workflow.py
src/core/observability/: decorators.py  model.py  setup.py  tracer.py
src/core/runtime/: agent_runtime.py
src/core/settings/: provider.py  provider_settings.py
src/core/workflow/: base_workflow.py
src/tools/: base.py  models.py  registry.py
src/tools/calculator/: models.py  tool.py
src/tools/datetime/: models.py  tool.py
src/tools/echo/: tool.py
src/tools/fetch_url_tool/: model.py  tool.py
src/tools/search/: models.py  tool.py
src/workflows/research/: nodes.py  router.py  state.py  workflow.py
