[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.137.2",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=0.3.3",
    "langchain-openrouter>=0.2.3",
    "langfuse>=4.11.0",
    "langgraph>=1.2.6",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
